infra/k8s-prod/ingress-cakeshop-configmap.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-cakeshop
  namespace: testnet
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: cakeshop.trustyline.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cakeshop
            port:
              number: 8080
